; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_namespace.c_nfs_expire_automounts.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_namespace.c_nfs_expire_automounts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_head = type { i32 }
%struct.work_struct = type { i32 }

@nfs_automount_list = common dso_local global %struct.list_head zeroinitializer, align 4
@nfs_automount_task = common dso_local global i32 0, align 4
@nfs_mountpoint_expiry_timeout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @nfs_expire_automounts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfs_expire_automounts(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca %struct.list_head*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  store %struct.list_head* @nfs_automount_list, %struct.list_head** %3, align 8
  %4 = load %struct.list_head*, %struct.list_head** %3, align 8
  %5 = call i32 @mark_mounts_for_expiry(%struct.list_head* %4)
  %6 = load %struct.list_head*, %struct.list_head** %3, align 8
  %7 = call i32 @list_empty(%struct.list_head* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @nfs_mountpoint_expiry_timeout, align 4
  %11 = call i32 @schedule_delayed_work(i32* @nfs_automount_task, i32 %10)
  br label %12

12:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @mark_mounts_for_expiry(%struct.list_head*) #1

declare dso_local i32 @list_empty(%struct.list_head*) #1

declare dso_local i32 @schedule_delayed_work(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
